--- a/views/User/about.ejs
+++ b/views/User/about.ejs
@@ -6,12 +6,12 @@
 	<title>About</title>
 	<meta name="title" content="Destro">
 	<link rel="stylesheet" href="../Public/stylesheet/about.css">
-	<link rel ="shortcut icon" href="../Public/images/home_18031529.png" type="image/svg+xml">
+	<link rel ="shortcut icon" href="../../Public//images/Logo maker project.png" type="image/svg+xml">
 </head>
 <body >
 	<header>
 		<div class="h_container">
-		<img src="../Public/images/favicon.svg" width="190" height="28" class="logo"></a>
+		<img src="../../Public/images/Logo maker project.png" width="190" height="28" class="logo"></a>
 
 		<nav class="navbar" data-navbar>
 
