--- a/views/Shared/login.ejs
+++ b/views/Shared/login.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
     <link rel="stylesheet" href="../Public/stylesheet/login.css">
-    <link rel ="shortcut icon" href="/home/destro/End/Public/images/home_18031529.png" type="image/svg+xml">
+    <link rel="shortcut icon" href="/home/destro/End/Public/images/home_18031529.png" type="image/svg+xml">
 </head>
 <body>
     <div class="background">
@@ -28,7 +28,7 @@
 
         <button type="submit">Log In</button>
         <div class="register">
-            <p>Don't Have Account? <a href="/signup">SignUp</a></p>
+            <p>Don't Have Account? <a href="/auth/signup">SignUp</a></p>
         </div>
     </form>
 </body>
