--- a/views/User/chat.ejs
+++ b/views/User/chat.ejs
@@ -5,30 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
     <link rel="stylesheet" href="/index.css">
-</head>
+    <meta name="csrf-token" content="<%= csrfToken %>"> </head>
 <body>
     <div id="chat-interface">
-        <!-- Conversations List -->
         <div id="conversations-list">
             <h2>Conversations</h2>
             <ul id="conversations">
-                <!-- Conversations will be dynamically added here -->
-            </ul>
+                </ul>
         </div>
 
-        <!-- Chat Window -->
         <div id="chat-window">
-            <!-- Chat Header -->
             <div id="chat-header">
                 <span id="chat-with">Chat with Seller</span>
             </div>
 
-            <!-- Chat Messages -->
             <div id="chat-messages">
-                <!-- Messages will be dynamically added here -->
-            </div>
+                </div>
 
-            <!-- Chat Input Area -->
             <div id="chat-input-area">
                 <input type="text" id="message-input" placeholder="Type your message...">
                 <button id="send-button">Send</button>
