--- a/views/User/property-details.ejs
+++ b/views/User/property-details.ejs
@@ -51,6 +51,9 @@
             </select><br>
             <label for="comment">Comment:</label><br>
             <textarea name="comment" id="comment" rows="4" cols="50"></textarea><br>
+
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
             <button type="submit">Submit Review</button>
         </form>
     <% } else { %>
